# belo

./: Cargo.toml  PKG-INFO  README.md  pyproject.toml
src/: cli.rs  config.rs  elo_system.rs  lib.rs  main.rs
tests/: test_belo.rs
