[package]
name = "belo"
version = "0.1.0"
edition = "2021"
authors = ["송재헌 <jhun.song@samsung.com>"]
license = "Apache-2.0"
keywords = ["rust", "elo", "glicko"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"]}
dirs = "5.0.1"
prettytable = "0.10.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
skillratings = { version = "0.27.1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"

[[bin]]
name = "belo"
path = "src/main.rs"